--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   flex-grow: 1;
   width: 160px;
   margin: 0 auto;
+  border:1px solid black;
 
 }
 .center{
@@ -38,6 +39,7 @@
   flex-grow: 1;
   width: 160px;
   margin: 0 auto;
+  border:1px solid black;
 }
 
 
