--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   width: 300px;
   margin: 0 auto;
 }
+.top{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .main{
   display: flex;
