--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-decoration: none;"
 }
 
 .main{
@@ -50,31 +51,57 @@
 
 
 .box{
-
   border:1px solid black;
   background: red;
   margin-top: 5px;
   margin-bottom: 5px;
   width: 250px;
   height: 140px;
+  padding:5px 10px 5px 10px;
+  display:inline-block;
+  border-radius: 10px;
+  transition: all 0.1s;
+  border-bottom: 6px solid black;
 
 }
+
+.box:active{
+  transform: translateY(10px);
+  border-bottom: 3px solid black;
+}
+
 .toolbar{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: red;
 }
 
-.tool1{
+.btn{
   border:1px solid black;
+  background-color: red;
   flex-grow: 1;
+  text-decoration:none;
+  padding:10px 20px 10px 20px;
+  display:inline-block;
+  border-radius: 10px;
+  transition: all 0.1s;
+  border-bottom: 6px solid black;
+  text-align: center;
 
 }
+.btn:active{
+  transform: translateY(10px);
+  border-bottom: 3px solid black;
+}
+
+a{
+  text-decoration:none;
+}
+
 .tool2{
   border:1px solid black;
-  height: 50px;
   flex-grow: 1;
+  text-decoration: none;
 }
 
 button{
@@ -96,6 +123,8 @@ h2{
 h3{
   color: white;
   text-align: center;
+  text-decoration: none;
+
 }
 
 footer{
