--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   border:1px solid black;
   background: lightgray;
   text-shadow: 0px 2px black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
 }
 .ad-ba{
   align-items: center;
@@ -81,13 +85,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  flex-grow: 1;
 }
 
 .btn{
   border:1px solid black;
   background-color: red;
   flex-grow: 1;
-  text-decoration:none;
   padding:10px 20px 10px 20px;
   display:inline-block;
   border-radius: 10px;
@@ -97,19 +101,16 @@
   text-shadow: 0px 2px black;
 
 }
+
 .btn:active{
   transform: translateY(10px);
   border-bottom: 3px solid black;
 }
 
+
+
 a{
   text-decoration:none;
-}
-
-.tool2{
-  border:1px solid black;
-  flex-grow: 1;
-  text-decoration: none;
 }
 
 button{
