--- a/style.css
+++ b/style.css
@@ -107,7 +107,20 @@
   border-bottom: 3px solid black;
 }
 
-
+.name{
+  border:1px solid black;
+  background: red;
+  margin-top: 5px;
+  width: 250px;
+  height: 50px;
+  padding:5px 10px 5px 10px;
+  display:inline-block;
+  border-radius: 10px;
+  transition: all 0.1s;
+  border-bottom: 6px solid black;
+  text-shadow: 0px 2px black;
+  text-align: center;
+}
 
 a{
   text-decoration:none;
@@ -130,7 +143,6 @@ h2{
 h3{
   color: white;
   text-align: center;
-  text-decoration: none;
 
 }
 
