--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
+  width: auto;
+  height: auto;
 }
 .ad-ba{
   align-items: center;
@@ -48,7 +50,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-grow: 0.5;
+  flex-grow: 0.1;
   border:1px solid black;
 }
 .right{
@@ -99,7 +101,8 @@
   border-bottom: 6px solid black;
   text-align: center;
   text-shadow: 0px 2px black;
-
+  width: auto;
+  height: auto;
 }
 
 .btn:active{
@@ -111,8 +114,8 @@
   border:1px solid black;
   background: red;
   margin-top: 5px;
-  width: 250px;
-  height: 50px;
+  width: auto;
+  height: auto;
   padding:5px 10px 5px 10px;
   display:inline-block;
   border-radius: 10px;
